Some mediaquery for logo, added mob-menu js back. Changed contact-section-info to be table like in footer to solve alignment issues. Tried to fix circles not working in safari/IE because of borderrad+padding

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -308,10 +308,11 @@ input:focus {
 .recent-posts, .archive, .categories {
 	list-style:none;
 	font-weight:bold;
-	margin:0;
+	margin:0;/*
 	-webkit-padding-start: 0px;
 	-moz-padding-start: 0px;
-	padding-start: 0px;
+	padding-start: 0px;*/
+    padding:0;
 	padding-bottom: 30px;
 }
 
@@ -608,7 +609,7 @@ button + label{
 
 .container{
 	margin-top:3%;
-	text-align: justify;
+	text-align: left;
 	font-size: 0.1px;
 	-webkit-backface-visibility: hidden;
 }
@@ -628,6 +629,7 @@ button + label{
 .container .mix{
 	text-align: left;
 	margin-bottom: 3%;
+    margin-right: 2.5%;
 	display: none;
 	vertical-align: top;
 }
@@ -1007,12 +1009,26 @@ border-bottom: 1px solid #ccc;
 
 .contact-info table {
 	line-height: 1.6;
+    max-width: 100% !important; 
+    table-layout: fixed; 
+    width: 100% !important;
 	
 }
 
 .contact-info td {
 	vertical-align:top;
+    word-wrap:break-word;
 }
+
+.contact-info td:nth-child(1){
+    width:25px; /*15%;*/
+}
+
+/*
+.contact-info td:nth-child(2){
+        width:85%;
+}
+*/
 
 #section-site-map ul {
 	list-style: none;
@@ -1020,9 +1036,11 @@ border-bottom: 1px solid #ccc;
 	font-weight:bold;
 	text-transform: uppercase;
 	margin:0;
+    /*
 	-moz-padding-start: 0px;
 	padding-start: 0px;
-	-webkit-padding-start: 0px;
+	-webkit-padding-start: 0px;*/
+    padding:0; 
 
 }
 
@@ -1122,9 +1140,10 @@ border-bottom: 1px solid #ccc;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     -khtml-border-radius: 50%;
-	padding:4px;
+	/*padding:4px;*/
+    border: 4px solid transparent;
 	box-shadow:0px 0px 5px #888;
-	-moz-box-shadow:0px 0px 5px #888;ckground-clip: padding;
+	-moz-box-shadow:0px 0px 5px #888;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
     -webkit-box-shadow:0px 0px 5px #888;
@@ -1251,9 +1270,9 @@ border-bottom: 1px solid #ccc;
 	background:white;
 	color:#222;
 	border-radius: 50%;
-    -moz-border-radius: 50%
-    -webkit-border-radius: 50%
-    -khtml-border-radius: 50%
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -khtml-border-radius: 50%;
 	height:30px;
 	box-sizing:border-box;
 	padding:5px 0 0 6px;
@@ -1770,6 +1789,7 @@ ul[data-level="0"]>li > div[id^="comment-"]> .comment-right .comment-border .rat
 	.contact-section-info {
 		width:47.5%;
 		float: left;
+        word-wrap:break-word;
 	}
 
 	.menu-mobile-container {display: block;}
@@ -1789,6 +1809,18 @@ ul[data-level="0"]>li > div[id^="comment-"]> .comment-right .comment-border .rat
 
 
 @media only screen and (max-width: 550px) {
+
+    .header-container h1 {
+        font-size: 23px;
+    }
+
+    .slide-body h2 {
+        font-size: 8px! important;
+    }
+
+    .slide-body .caption{
+        font-size: 6px! important;
+    }
 
 	#section-site-map .logicon-info {
 		width:100%;
